--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>SparkUp Solutions</title>
     <script type="text/javascript">
       if (window.location.pathname === "/") {
-        window.location.replace(window.location.origin + "/#/home");
+        window.location.replace(window.location.origin + "/Home");
       }
     </script>
   </head>
